# bundle_adjustment

./: .gitignore
baker_lucas_kanade_1/lk20-p1/: run_affine.m
code/: CMakeLists.txt  MOSAIC.cpp  MOSAIC.h  ba.cpp  ba.h  ba_illum.cpp  ba_illum_multichannel.cpp  ba_multichannel.cpp  ideas.txt  main.cpp  main_all.cpp  tracking_aux.cpp  tracking_aux.h  utils.cpp  utils.h
code/settings/: parameters.yml
